# DAWpy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: basic_beat.py
examples/audio/: README.txt
examples/tone-song/: constants.py  mixer.py  track1.py  track2.py  track3.py
src/dawpy/: __init__.py  composition.py  project.py  renderable.py  silence.py  timeline.py  tone.py  visualizer.py
src/dawpy/sample/: __init__.py  _base.py  beat_locked.py  free.py  inspect.py
