[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "DAWpy"
version = "2026.2.20.0"
dependencies = [
    "numpy>=1.26.4",
    "sounddevice>=0.5",
    "soundfile>=0.12",
    "scipy>=1.2"
]
requires-python = ">=3.11"
authors = [
    {name = "Mithran Mohanraj", email = "mithran.mohanraj@gmail.com"}
]
maintainers = [
    {name = "Mithran Mohanraj", email = "mithran.mohanraj@gmail.com"}
]
description = "A Digital Audio Workstation in your CLI."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

# Install the analysis extras with:
#   pip install -e ".[analysis]"
#
# For GPU acceleration (recommended — CUDA 12.x+ required):
#   pip install torch torchaudio --index-url https://download.pytorch.org/whl/cu130
#   pip install -e ".[analysis]"
#
# The torch/torchaudio entries here pull the CPU-only builds as a fallback.
# If you have already installed a CUDA build they will not be overwritten.
[project.optional-dependencies]
analysis = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "transformers>=4.38",
    "accelerate"
]

# Local vibelint config for analyzing vibelint itself
[tool.vibelint]
include_globs = [
    "**/*"
]
exclude_globs = [
    "**/__pycache__/**",
    "**/.*",           # dotfiles/directories (nested)
    ".*",              # dotfiles at root level
    "*.wav",
    "audio/*",
]